# milvus-bootstrap

./: .gitignore  README.md  serve-docs.py
milvus-bootstrap/: .gitignore  README.md  pyproject.toml
milvus-bootstrap/.mb-e2e2/state/instances/: e2e-etcd.json  e2e-minio.json  e2e-wp.json
milvus-bootstrap/.mb-e2e2/state/tasks/: task-1086a0b5.json  task-21931c0c.json  task-2b31b621.json  task-2e01e3b4.json  task-f419b8b7.json
milvus-bootstrap/scripts/: kind-up.sh  mb-live-env.sh
milvus-bootstrap/src/milvus_bootstrap/: __init__.py  paths.py
milvus-bootstrap/src/milvus_bootstrap/cli/: __init__.py  main.py
milvus-bootstrap/src/milvus_bootstrap/client/: __init__.py  daemon_client.py
milvus-bootstrap/src/milvus_bootstrap/core/: __init__.py  compat.py  compat.yaml  context.py  doctor.py  hostinfo.py  models.py  probe.py  profile.py  progress.py  registry.py  resources.py  taskrunner.py  webapi.py
milvus-bootstrap/src/milvus_bootstrap/profiles/: __init__.py  etcd.yaml  kafka.yaml  milvus.yaml  (+3 more)
milvus-bootstrap/tests/: test_cli_doctor.py  test_cli_web.py  test_compat.py  test_config.py  test_doctor.py  test_hostinfo.py  test_k8s_adapter.py  test_kafka_pulsar.py  test_lifecycle.py  test_milvus.py  test_milvus_mq.py  test_minio.py  test_ownership.py  test_probe.py  test_progress.py  test_resources.py  test_switch_mq.py  test_taskrunner.py  test_vertical_slice.py  test_web_config.py  test_web_endpoints.py  test_web_install.py  test_web_logs.py  test_web_resources.py  test_web_static.py  test_web_switchmq.py  test_web_task.py  test_webapi.py  test_woodpecker.py
(+107 files in other folders)
