[project]
name = "milvus-bootstrap"
version = "0.0.1"
description = "Milvus install/ops tool — thin CLI client + core daemon (ServiceDriver × PlatformAdapter)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pyyaml>=6",
]

[project.optional-dependencies]
k8s = ["kubernetes>=29"]
dev = ["pytest>=8"]

[project.scripts]
mb = "milvus_bootstrap.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/milvus_bootstrap"]

[tool.hatch.build.targets.wheel.force-include]
"src/milvus_bootstrap/profiles" = "milvus_bootstrap/profiles"
